fix html background white color bleed

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html {
+  background-color: #0a1428;
+}
 body {
   /* font-family: sans-serif; */
   font-family: monospace;
